--- a/lib/chapter2.tex
+++ b/lib/chapter2.tex
@@ -1,6 +1,6 @@
 \section{CAPÍTULO II: OBJETIVOS}\label{sec:objectives}
 
-En esta sección del trabajo se van a definir los objetivos generales y específicos que se pretenden alcanzar en el presente Trabajo de Fin de Máster. 
+En esta sección del trabajo se definen los objetivos generales y específicos que se pretenden alcanzar en el presente Trabajo de Fin de Máster. 
 
 \subsection{Objetivo General}
 
@@ -10,7 +10,7 @@ Se buscará a partir de los datos extraídos de 79 pacientes ingresados en el Ho
 
 \subsection{Objetivos Específicos}
 
-Se van a establecer los siguientes objetivos específicos para conseguir el objetivo general comentado anteriormente:
+Se establecen los siguientes objetivos específicos para conseguir el objetivo general comentado anteriormente:
 
 \begin{itemize}
     \item Preparar los datos recibidos por parte del Hospital Gregorio Marañón para su posterior uso en los modelos de AA. Esto incluye la limpieza de los datos e imputación y normalización en algunos casos. 
