--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,12 +1,16 @@
 \section{CAPÍTULO I: INTRODUCCIÓN}\label{sec:introduction}
 
-En esta sección del trabajo se van a explicar y definir los conceptos básicos en relación al contexto del trabajo que se van a utilizar a lo largo del mismo. Además, se va a realizar una revisión bibliográfica de los temas que se van a tratar.
+En esta sección del trabajo se explican y definen los conceptos básicos en relación al contexto del trabajo que se utilizarán a lo largo del mismo. Además, se realiza una revisión bibliográfica de los temas que se van a tratar.
 
 \subsection{Bronquiolitis, Insuficiencia Respiratoria Aguda y Oxigenoterapia de Alto Flujo}
 
-La bronquiolitis (BR), una infección de las vías respiratorias inferiores causada principalmente por el virus respiratorio sincitial (VRS) y puede convertirse en una enfermedad muy grave. En algunos casos es necesaria la la hospitalización 10 \% de los casos, y hasta el 23,8 \% de estos pacientes necesitan cuidados críticos por insuficiencia respiratoria o episodios de apnea. Aunque la BR puede diagnosticarse en adultos y ancianos, son los lactantes, sobre todo los más pequeños, los sujetos más afectados por la enfermedad.(\cite{Fainardi2021}) La dificultad respiratoria que caracteriza y condiciona la gravedad del cuadro, alcanza su máxima expresividad transcurridos los primeros 3-5 días de evolución de la enfermedad, y es la causa principal de ingreso hospitalario. (\cite{Patel2003})
+La bronquiolitis (BR), es una infección de las vías respiratorias inferiores causada principalmente por el virus respiratorio sincitial (VRS) y puede convertirse en una enfermedad muy grave. En el 10 \% de los casos es necesaria la hospitalización, y hasta el 23,8 \% de estos pacientes necesitan cuidados críticos por insuficiencia respiratoria o episodios de apnea. Aunque la BR puede diagnosticarse en adultos y ancianos, son los lactantes, sobre todo los más pequeños, los sujetos más afectados por la enfermedad.  (\cite{Fainardi2021}) La dificultad respiratoria que caracteriza y condiciona la gravedad del cuadro, alcanza su máxima expresividad transcurridos los primeros 3-5 días de evolución de la enfermedad, y es la causa principal de ingreso hospitalario. (\cite{Patel2003})
 
-La bronquiolitis afecta principalmente al tracto respiratorio inferior y es la patología más común en niños menores de 2 años de edad siendo la principal causa de ingreso hospitalario en lactantes menores de 1 año de edad . El pilar de tratamiento de bronquiolitis a día de hoy se basa en la atención de apoyo, incluyendo la alimentación, la hidratación y el apoyo respiratorio desde administración estándar de oxígeno a la ventilación invasiva. (\cite{Daverio2019})
+{\color{blue} Veo que la manera de poner las citas es primero el punto y luego la cita. Por ejemplo: . (\cite{Patel2003})}
+
+{\color{blue} Si es lo usual en los TFM, entonces Ok. Si no lo es, me parece mejor poner: (\cite{Patel2003}).}
+
+La bronquiolitis afecta principalmente al tracto respiratorio inferior y es la patología más común en niños menores de 2 años de edad siendo la principal causa de ingreso hospitalario en lactantes menores de 1 año de edad. El pilar de tratamiento de bronquiolitis a día de hoy se basa en la atención de apoyo, incluyendo la alimentación, la hidratación y el apoyo respiratorio desde administración estándar de oxígeno a la ventilación invasiva. (\cite{Daverio2019})
 
 Una de las posibles complicaciones graves derivadas del cuadro bronquiolítico es la insuficiencia respiratoria aguda (IRA). Esta se define como la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono entre el aire ambiental y la sangre circulante, ésta debe realizarse en forma eficaz y adecuada a las necesidades metabólicas del organismo, teniendo en cuenta la edad, los antecedentes y la altitud en que se encuentra el paciente. (\cite{FernandoR2010})  
 
@@ -21,7 +25,7 @@ En los años recientes se ha incrementado el uso de la OAF en los pacientes con 
 
 En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y adultos. La OAF muestra menos probabilidades de fracaso cuando se tratan los pacientes fuera de la UCI. Esto se debe principalmente a que aquellos pacientes que no están en UCI tienen una menor gravedad de la enfermedad y, por lo tanto son menos propensos a requerir una atención más intensiva, también tienen menos factores de riesgo asociados con el fracaso del OAF; como comorbilidades cardíacas y antecedentes de intubación. (\cite{Betters2017}) 
 
-En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo (\cite{Lodeserto2018}) hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
+En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo de \cite{Lodeserto2018} se hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
 
 Actualmente en los servicios de pediatría de los hospitales no se dispone de marcadores clínicos, biológicos o inmunológicos precoces que permitan prever la evolución de los pacientes ingresados por bronquiolitis. Tan solo se cuenta con los datos de la exploración física y de las escalas validadas, parcialmente objetivas, para determinar su gravedad en el momento del ingreso, pero no se permite prever su evolución. Estos mismos datos son en los que se apoya el equipo sanitario para decidir si al paciente se la suministra OAF o se le lleva a la UCI pediátrica dónde se realizan otras técnicas para estabilizar el cuadro grave de bronquiolitis. Esta información ha sido obtenida a raíz de mantener conversaciones con el servicio de pediatría del Hospital Universitario Gregorio Marañón.
 
@@ -32,7 +36,7 @@ Existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas d
 
 Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización. (\cite{AmandaC})
 
-En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica expresa la cantidad de oxígeno que se combina, en el sentido químico,con la hemoglobina para formar la oxihemoglobina,que es quien transporta el oxígeno en sangre hacia los tejidos. (\cite{Laborde2004}) La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
+En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica expresa la cantidad de oxígeno que se combina, en el sentido químico, con la hemoglobina para formar la oxihemoglobina, que es quien transporta el oxígeno en sangre hacia los tejidos. (\cite{Laborde2004}) La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
 
 
 \subsection{Aprendizaje Automático en el Ámbito de la Salud}
@@ -44,7 +48,7 @@ El aprendizaje automático (AA) es una rama de la inteligencia artificial que se
     \item El aprendizaje no supervisado se refiere a un conjunto de algoritmos que pueden aplicarse a un conjunto de datos no etiquetados.
 \end{itemize}
 
-En el presente trabajo se utilizaran ambas disciplinas.
+En el presente trabajo se utilizaran ambos enfoques.
 
 
 
